--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <iframe src="https://editor.p5js.org/nandykongu/present/knVNB1UHH" width="2500" height="500"></iframe>
+      <h1 id="poseName">Welcome</h1>
+  <script src="sketch.js"></script>>
   
 </body>
 
