--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
       <h1 id="poseName">Welcome</h1>
-  <script src="sketch.js"></script>>
+  <script src="sketch.js"></script>
   
 </body>
 
